; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Rtc/extr_fman_rtc.c_fman_rtc_set_periodic_pulse.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Rtc/extr_fman_rtc.c_fman_rtc_set_periodic_pulse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtc_regs = type { i32 }

@FMAN_RTC_TMR_TEVENT_PP1 = common dso_local global i32 0, align 4
@FMAN_RTC_TMR_TEVENT_PP2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fman_rtc_set_periodic_pulse(%struct.rtc_regs* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rtc_regs*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.rtc_regs* %0, %struct.rtc_regs** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.rtc_regs*, %struct.rtc_regs** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @fman_rtc_set_timer_fiper(%struct.rtc_regs* %10, i32 %11, i32 %12)
  %14 = load i32, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %27

16:                                               ; preds = %4
  %17 = load i32, i32* %6, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = load i32, i32* @FMAN_RTC_TMR_TEVENT_PP1, align 4
  store i32 %20, i32* %9, align 4
  br label %23

21:                                               ; preds = %16
  %22 = load i32, i32* @FMAN_RTC_TMR_TEVENT_PP2, align 4
  store i32 %22, i32* %9, align 4
  br label %23

23:                                               ; preds = %21, %19
  %24 = load %struct.rtc_regs*, %struct.rtc_regs** %5, align 8
  %25 = load i32, i32* %9, align 4
  %26 = call i32 @fman_rtc_enable_interupt(%struct.rtc_regs* %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %4
  ret void
}

declare dso_local i32 @fman_rtc_set_timer_fiper(%struct.rtc_regs*, i32, i32) #1

declare dso_local i32 @fman_rtc_enable_interupt(%struct.rtc_regs*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
